--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,46 @@
-.App {
-  text-align: center;
+.app {
+  background-color: #282c34;
+  height: 200px;
+  width: 500px;
+  border-radius: 10px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
+.app__logo {
+  height: 5vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .app__logo {
+    animation: app-logo-spin infinite 20s linear;
+    margin-right: 0.5rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 1rem;
+  font-size: 18px;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+}
+
+.app__link {
+  color: #61dafb;
+  margin-right: 1rem;
+}
+
+.app__main {
+  padding: 0 1.75rem;
+  font-size: 18px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
