--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,18 @@ body {
   justify-content: center;
   align-items: center;
   background: #596171;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: 18px;
+  text-decoration: underline;
+  cursor: pointer;
+}
